--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "form-data": "^4.0.5",
     "next": "16.1.1",
+    "node-fetch": "^3.3.2",
+    "openai": "^6.15.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
