Add crypto dependency and implement caching for image processing; enhance page layout with instructions and footer components. Shipped MVP v0.2

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "crypto": "^1.0.1",
     "form-data": "^4.0.5",
     "next": "16.1.1",
     "node-fetch": "^3.3.2",
