--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "16.1.1",
     "node-fetch": "^3.3.2",
     "openai": "^6.15.0",
+    "p-queue": "^9.0.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
